  window where Solr would continue to execute in an unpredictable state. (Shawn Heisey, Kevin Risden)

* SOLR-15748: A v2 equivalent of CLUSTERSTATUS command is now available at `GET /api/cluster`. Collection listing,
  previously at this path, can still be accessed at `GET /api/collections`. (Joshua Ouma via Jason Gerlowski)

* SOLR-13626: Document the SystemInfoHandler in the Ref Guide.  (Tony Cook via Eric Pugh)

* SOLR-16420: Introducing `{!mlt_content}foo bar` to cover existing `/mlt` handler functionality for SolrCloud.
  (Mikhail Khludnev)

* SOLR-11028: A v2 equivalent of the `/admin/collections?action= REPLACE` command is now available at
  `POST /api/cluster/nodes/nodeName/replace`. (Joshua Ouma via Jason Gerlowski)

* SOLR-15479: A v2 equivalent of the RENAME command is now available at `POST /api/collections/collName/rename`. (Anakhe Ajayi via Jason Gerlowski)

* SOLR-16158: Certain Jetty "server" jars (jetty-util, jetty-io, etc.) are no longer duplicated between server/lib and WEB-INF/lib. All shared jars now live in server/lib/ext.
  By default, Jetty does not allow these jars to be shared by the Jetty server and the web-app (Solr).
  In order to accomplish this, explicit exclusions have been added to server/contexts/solr-jetty-context.xml that allow these "server" jars to be shared.
  Solr Core also no longer contains the JettySolrRunner (now living in the testing framework), removing the need for Jetty Server dependencies in solr-core.
  (Houston Putman)

* SOLR-16565: posting the same file to the package store should not throw an error (noble)

* SOLR-8975: Introduce Builder setters for setters that exist on SolrClients for responseParser, requestWriter.
  Deprecated these SolrClient setters useMultiPartPost, and followRedirects. (Eric Pugh, David Smiley, Kevin Risden)

* SOLR-15787: FileSystemConfigSetService: implement the abstraction completely.  It could be useful
 for putting ConfigSets on a shared file system.  (Nazerke Seidan, David Smiley)
